--- a/index.html
+++ b/index.html
@@ -6,6 +6,45 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<div class="page-wrapper">
+    <div class="container navigation">
+        <div class="row">
+            <div class="col d-flex">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">Pizza World</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Order Online</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Menu</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex">
+                                <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
+                                <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>
+                            </form>
+                        </div>
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="d-flex align-items-center">
+                                <img class="person-icon" src="https://t4.ftcdn.net/jpg/00/65/77/27/360_F_65772719_A1UV5kLi5nCEWI0BNLLiFaBPEkUbv5Fv.jpg" alt="person icon">
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Sign Up!</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
