--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <div class="page-wrapper">
-    <div class="container navigation">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="navigation row">
             <div class="col d-flex">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg flex-grow-1" style="background-color: #fff;">
+                    <div class="navigation container-fluid">
                         <a class="navbar-brand" href="#">Pizza World</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Menu</a>
                                 </li>
+                                <li>
+                                    <form class="d-flex">
+                                        <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
+                                        <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>
+                                    </form>
+                                </li>
+
                             </ul>
-                            <form class="d-flex">
-                                <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
-                                <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>
-                            </form>
                         </div>
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="d-flex align-items-center">
