completed nav bar

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        .
+    <div class="container-fluid">
+        <div class="pizza-row row">
+            <div class="col d-flex justify-content-center">
+                <img src="./images/pizza.png" alt="big ole slice of pizza">
+            </div>
+        </div>
     </div>
 </div>
 
