--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="page-wrapper">
-    <div class="container-fluid">
+    <header class="container">
         <div class="navigation row">
             <div class="col d-flex">
                 <nav class="navbar navbar-expand-lg flex-grow-1" style="background-color: #fff;">
@@ -35,26 +35,48 @@
                         </div>
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="d-flex align-items-center">
-                                <img class="person-icon" src="https://t4.ftcdn.net/jpg/00/65/77/27/360_F_65772719_A1UV5kLi5nCEWI0BNLLiFaBPEkUbv5Fv.jpg" alt="person icon">
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Sign Up!</a>
+                                <a class="d-flex gap-1 align-items-center" href="#">
+                                    <img class="person-icon" src="https://t4.ftcdn.net/jpg/00/65/77/27/360_F_65772719_A1UV5kLi5nCEWI0BNLLiFaBPEkUbv5Fv.jpg" alt="person icon">
+                                    <span>Sign Up!</span>
+                                </a>
                             </li>
                         </ul>
                     </div>
                 </nav>
             </div>
         </div>
-    </div>
-    <div class="container-fluid">
-        <div class="pizza-row row">
-            <div class="col d-flex justify-content-center">
-                <img src="./images/pizza.png" alt="big ole slice of pizza">
+    </header>
+    <div class="container p-0 d-flex flex-column justify-content-center hero">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center">Welcome to pizza land!</h1>
             </div>
         </div>
     </div>
+    <section class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <h2>Build your own pizza</h2>
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">...</div>
+                    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
+                    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
