--- a/index.html
+++ b/index.html
@@ -69,10 +69,139 @@
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">...</div>
-                    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
-                    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
-                </div>
+                    <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                        <!-- First Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Hand-Tossed</h5>
+                                <p class="card-text">Garlic seasoned crust with a rich, buttery taste.</p>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="size" id="small" value="small">
+                                    <label class="form-check-label" for="small">
+                                        Small (10")
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="size" id="medium" value="medium">
+                                    <label class="form-check-label" for="medium">
+                                        Medium (12")
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Second Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Crispy Thin</h5>
+                                <p class="card-text">Thin enough for optimum crispy to crunchy ratio.</p>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="size" id="medium" value="medium">
+                                    <label class="form-check-label" for="medium">
+                                        Medium (12")
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="size" id="large" value="large">
+                                    <label class="form-check-label" for="medium">
+                                        Large (14")
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                        <!-- First Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Cheese</h5>
+                                <div class="form-group">
+                                    <label for="cheese-amount">Select Amount:</label>
+                                    <select class="form-control" id="cheese-amount">
+                                        <option value="normal">Normal</option>
+                                        <option value="less">Less</option>
+                                        <option value="extra">Extra</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Second Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Sauce</h5>
+                                    <label for="sauce-type">Select Type:</label>
+                                    <select class="form-control" id="sauce-type">
+                                        <option value="marinara">Marinara</option>
+                                        <option value="spicy">Spicy Marinara</option>
+                                        <option value="alfredo">Alfredo</option>
+                                        <option value="bbq">Barbeque Sauce</option>
+                                        <option value="pesto">Pesto</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                        <!-- First Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Choose Meats</h5>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="beef" value="beef">
+                                    <label class="form-check-label" for="beef">
+                                        Beef
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="ham" value="ham">
+                                    <label class="form-check-label" for="ham">
+                                        Ham
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="philly" value="philly">
+                                    <label class="form-check-label" for="philly">
+                                        Philly Steak
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="bacon" value="bacon">
+                                    <label class="form-check-label" for="bacon">
+                                        Bacon
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Second Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Choose Veggies</h5>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="peppers" value="peppers">
+                                    <label class="form-check-label" for="peppers">
+                                        Green Peppers
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="mushrooms" value="mushrooms">
+                                    <label class="form-check-label" for="mushrooms">
+                                        Mushrooms
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="onions" value="onions">
+                                    <label class="form-check-label" for="onions">
+                                        Onions
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="jal" value="jal">
+                                    <label class="form-check-label" for="jal">
+                                        Jalapeno Peppers
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </section>
