--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <header class="container">
         <div class="navigation row">
             <div class="col d-flex">
+                <nav class="navbar bg-body-tertiary">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                            <img src="./images/" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                            Bootstrap
+                        </a>
+                    </div>
+                </nav>
                 <nav class="navbar navbar-expand-lg flex-grow-1" style="background-color: #fff;">
                     <div class="navigation container-fluid">
                         <a class="navbar-brand" href="#">Pizza World</a>
