added mario nav

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="navigation row">
             <div class="col d-flex">
                 <nav class="navbar bg-body-tertiary">
-                    <div class="container-fluid">
+                    <div class="container-fluid" style="background-color: #fff;">
                         <a class="navbar-brand" href="#">
-                            <img src="./images/" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                            Bootstrap
+                            <img src="./images/mario_navbar.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                            Mario's Pizza
                         </a>
                     </div>
                 </nav>
