--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-black fs-5 p-2 menu-icon" href="#">Menu</a>
                                 </li>
-                                <li class="d-flex align-items-center">
-                                    <form class="d-flex">
-                                        <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
-                                        <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>
-                                    </form>
-                                </li>
+<!--                                <li class="d-flex align-items-center">-->
+<!--                                    <form class="d-flex">-->
+<!--                                        <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">-->
+<!--                                        <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>-->
+<!--                                    </form>-->
+<!--                                </li>-->
 
                             </ul>
                         </div>
@@ -53,6 +53,12 @@
     </header>
     <div class="container-fluid p-0 hero animation-container">
         <div class="row">
+            <div class="col d-flex justify-content-end align-items-center">
+                <form>
+                    <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
+                    <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>
+                </form>
+            </div>
             <div class="col d-flex flex-grow-1">
                 <img class="hero-img walking-image" src="./images/characters.png" alt="">
             </div>
