--- a/index.html
+++ b/index.html
@@ -29,12 +29,23 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-black fs-5 p-2 menu-icon" href="#">Menu</a>
                                 </li>
+<!--                                mango-->
 <!--                                <li class="d-flex align-items-center">-->
 <!--                                    <form class="d-flex">-->
 <!--                                        <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">-->
 <!--                                        <button class="btn btn-outline-success text-nowrap" type="submit">Search stores near you!</button>-->
 <!--                                    </form>-->
 <!--                                </li>-->
+                                <li class="nav-item">
+                                    <a class="nav-link text-black fs-5 p-2 menu-icon" href="#">Menu</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <form class="d-flex">
+                                        <input class="form-control me-2"                                        type="search" placeholder="Zip Code"                                    aria-label="Search">
+                                        <button class="btn btn-outline-success                                  text-nowrap" type="submit">Search stores                                near you!</button>
+                                    </form>
+                                </li>
+<!--                                mango-->
 
                             </ul>
                         </div>
