--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
         </div>
     </header>
     <div class="container-fluid p-0 hero animation-container">
-        <div class="row">
-            <div class="col d-flex justify-content-end align-items-center">
+        <div class="row d-flex justify-content-end align-items-center">
+            <div class="col hero-header">
+                <h1>1-UP!!!</h1>
+                <h2>Collect your rewards TODAY!</h2>
+                <p>With every purchase over $10 receive a star on your rewards card! 10 stars gets you a free pizza!</p>
             </div>
             <div class="col d-flex flex-grow-1">
                 <img class="hero-img walking-image" src="./images/characters.png" alt="">
@@ -65,13 +68,13 @@
                 <h2>Build your own pizza</h2>
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><span class="badge bg-secondary badge-1" style="border-radius: 50px;">1</span> Size and Crust</button>
+                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><img src="./images/question-block.png" alt="Logo" width="30" height="18" class="d-inline-block align-text-middle"> Size and Crust</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><span class="badge bg-secondary badge-2" style="border-radius: 50px;">2</span> Cheese and sauce</button>
+                        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><img src="./images/question-block.png" alt="Logo" width="30" height="18" class="d-inline-block align-text-middle"> Cheese and sauce</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false"><span class="badge bg-secondary badge-3" style="border-radius: 50px;">3</span> Toppings</button>
+                        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false"><img src="./images/question-block.png" alt="Logo" width="30" height="18" class="d-inline-block align-text-middle"> Toppings</button>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
