added hero form and style

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
     <div class="container-fluid p-0 hero animation-container">
         <div class="row d-flex justify-content-end align-items-center">
             <div class="col hero-header">
-                <h1>1-UP!!!</h1>
-                <h2>Collect your rewards TODAY!</h2>
-                <p>With every purchase over $10 receive a star on your rewards card! 10 stars gets you a free pizza!</p>
+                <h1>1-UP Rewards</h1>
+                <h2 class="hero-left-align">Start earning stars on your purchases </h2>
+                <p class="hero-left-align">Sign up with your email and begin collecting stars on every purchase. Collect 10 stars and redeem a free pizza, any size, with unlimited toppings.</p>
+                <form class="d-flex hero-left-align">
+                    <input class="form-control me-2" type="email" placeholder="Email" aria-label="Search">
+                    <button class="btn btn-outline-success text-nowrap" type="submit">Sign Up!</button>
+                </form>
             </div>
             <div class="col d-flex flex-grow-1">
                 <img class="hero-img walking-image" src="./images/characters.png" alt="">
