--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="col d-flex">
                 <nav class="navbar bg-body-tertiary red-ease">
                     <div class="container-fluid" style="background-color: #fff;">
-                        <a class="navbar-brand slide-left fs-3" href="#">
-                            <img src="./images/mario_navbar.png" alt="Logo" width="36" height="30" class="d-inline-block align-text-middle">
+                        <a class="navbar-brand slide-left fs-3 apply-2p" href="#">
+                            <img src="./images/mario_navbar.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-middle ">
                             Mario's Pizza
                         </a>
                     </div>
@@ -69,7 +69,7 @@
     <section class="container mt-5">
         <div class="row">
             <div class="col">
-                <h2>Build your own pizza</h2>
+                <h2 class="apply-2p">Build your own pizza</h2>
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><img src="./images/question-block.png" alt="Logo" width="30" height="18" class="d-inline-block align-text-middle"> Size and Crust</button>
