--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="col d-flex">
                 <nav class="navbar bg-body-tertiary red-ease">
                     <div class="container-fluid" style="background-color: #fff;">
-                        <a class="navbar-brand slide-left fs-3 apply-2p" href="#">
+                        <a class="navbar-brand slide-left fs-3 apply-2p d-flex" href="#">
                             <img src="./images/mario_navbar.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-middle ">
                             Mario's Pizza
                         </a>
@@ -218,6 +218,16 @@
             </div>
         </div>
     </section>
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col d-flex justify-content-end align-items-start">-->
+<!--                <div class="d-grid gap-2 d-md-block">-->
+<!--                    <button class="btn btn-primary" type="button">Button</button>-->
+<!--                    <button class="btn btn-primary" type="button">Button</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
