--- a/index.html
+++ b/index.html
@@ -228,6 +228,42 @@
             </div>
         </div>
     </div>
+    <footer class="container">
+            <div class="column gap-30">
+                <h2 class="section-title">Contact</h2>
+                <p>I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p>
+            </div>
+            <div class="column">
+                <form id="contact" method="post" action="" class="d-flex flex-column">
+                    <input type="text" name="name" id="name" placeholder="NAME" required>
+                    <input type="email" name="email" id="email" placeholder="EMAIL" required>
+                    <textarea name="message" id="message" placeholder="MESSAGE" required></textarea>
+                    <div class="d-flex justify-content-end">
+                        <button class="btn">SEND MESSAGE</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="row py-20">
+            <div class="column">
+                <a href="/" class="logo">morgansmith</a>
+            </div>
+            <div class="column flex-shrink-1">
+                <ul class="d-flex align-items-center gap-30 slide-right">
+                    <li>
+                        <a href="https://github.com/smorgannicole" target="_blank">
+                            <img src="./assets/images/icon-github.svg" alt="github icon" class="menu-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/in/smorgannicole" target="_blank">
+                            <img src="./assets/images/icon-linkedin.svg" alt="linkedin icon" class="menu-icon">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
